--- a/lab02/analytics/build.gradle
+++ b/lab02/analytics/build.gradle
@@ -1,19 +1,38 @@
-plugins {
-    id 'java'
-}
-
-group 'org.example'
-version '1.0-SNAPSHOT'
+apply plugin: 'java'
 
 repositories {
     mavenCentral()
 }
 
-dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+configurations {
+    invoker
 }
 
-test {
-    useJUnitPlatform()
+dependencies {
+    // Every function needs this dependency to get the Functions Framework API.
+    compileOnly 'com.google.cloud.functions:functions-framework-api:1.0.4'
+
+    // To run function locally using Functions Framework's local invoker
+    invoker 'com.google.cloud.functions.invoker:java-function-invoker:1.0.3'
+
+    // These dependencies are only used by the tests.
+    testImplementation 'com.google.cloud.functions:functions-framework-api:1.0.4'
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'com.google.truth:truth:1.1.3'
+    testImplementation 'org.mockito:mockito-core:4.0.0'
+
+}
+
+// Register a "runFunction" task to run the function locally
+tasks.register("runFunction", JavaExec) {
+    main = 'com.google.cloud.functions.invoker.runner.Invoker'
+    classpath(configurations.invoker)
+    inputs.files(configurations.runtimeClasspath, sourceSets.main.output)
+    args(
+            '--target', project.findProperty('run.functionTarget') ?: '',
+            '--port', project.findProperty('run.port') ?: 8080
+    )
+    doFirst {
+        args('--classpath', files(configurations.runtimeClasspath, sourceSets.main.output).asPath)
+    }
 }
