--- a/lab02/analytics/build.gradle
+++ b/lab02/analytics/build.gradle
@@ -3,7 +3,6 @@ apply plugin: 'java'
 repositories {
     mavenCentral()
 }
-
 configurations {
     invoker
 }
@@ -11,7 +10,7 @@ configurations {
 dependencies {
     // Every function needs this dependency to get the Functions Framework API.
     compileOnly 'com.google.cloud.functions:functions-framework-api:1.0.4'
-
+    implementation 'io.pebbletemplates:pebble:3.1.5'
     // To run function locally using Functions Framework's local invoker
     invoker 'com.google.cloud.functions.invoker:java-function-invoker:1.0.3'
 
