--- a/lab03/data-fetcher/package.json
+++ b/lab03/data-fetcher/package.json
@@ -2,13 +2,13 @@
   "name": "data-fetcher",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.mjs",
   "scripts": {
     "test": "echo \"Error: lmao only test in prod\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "node-fetch": "^3.0.0"
+    "node-fetch": "^2.0.0"
   }
 }
