Fix typo in package.json

--- a/lab03/data-fetcher/package.json
+++ b/lab03/data-fetcher/package.json
@@ -2,7 +2,7 @@
   "name": "data-fetcher",
   "version": "1.0.0",
   "description": "",
-  "main": "index.mjs",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: lmao only test in prod\" && exit 1"
   },
