--- a/lab04/zappa_settings.json
+++ b/lab04/zappa_settings.json
@@ -6,5 +6,46 @@
         "runtime": "python3.8",
         "s3_bucket": "zappa-uhodpma9f",
         "aws_region": "eu-central-1"
+    },
+    "test": {
+        "lambda_handler": "fetch_data.prepare_data",
+        "profile_name": "default",
+        "project_name": "test",
+        "runtime": "python3.8",
+        "s3_bucket": "zappa-uhodpma9f",
+        "aws_region": "eu-central-1"
+    },
+    "test2": {
+        "lambda_handler": "recommender.calculate_user_rating_matrix",
+        "profile_name": "default",
+        "project_name": "test",
+        "runtime": "python3.8",
+        "s3_bucket": "zappa-uhodpma9f",
+        "aws_region": "eu-central-1"
+    }
+    ,
+    "test3": {
+        "lambda_handler": "recommender.compare_user_ratings",
+        "profile_name": "default",
+        "project_name": "test",
+        "runtime": "python3.8",
+        "s3_bucket": "zappa-uhodpma9f",
+        "aws_region": "eu-central-1"
+    },
+    "test4": {
+        "lambda_handler": "recommender.calculate_similarity_matrix",
+        "profile_name": "default",
+        "project_name": "test",
+        "runtime": "python3.8",
+        "s3_bucket": "zappa-uhodpma9f",
+        "aws_region": "eu-central-1"
+    },
+    "test5": {
+        "lambda_handler": "recommender.calculate_movie_rating_matrix",
+        "profile_name": "default",
+        "project_name": "test",
+        "runtime": "python3.8",
+        "s3_bucket": "zappa-uhodpma9f",
+        "aws_region": "eu-central-1"
     }
 }
