--- a/lab05/recommender-backend/Dockerfile
+++ b/lab05/recommender-backend/Dockerfile
@@ -6,10 +6,9 @@ ENV DB_NAME=
 ENV DB_HOST=
 ENV PORT=
 
-RUN mkdir /app
-COPY * /app
-
 WORKDIR /app
+COPY * ./
+
 RUN apt-get update
 RUN apt-get install -y python3 python3-pip
 RUN pip3 install -r requirements.txt
