--- a/lab05/form-frontend/Dockerfile
+++ b/lab05/form-frontend/Dockerfile
@@ -6,10 +6,9 @@ ENV DB_NAME=
 ENV DB_HOST=
 ENV PORT=
 
-RUN mkdir /app
-COPY * /app
-
 WORKDIR /app
+COPY * ./
+
 RUN apt-get update
 RUN DEBIAN_FRONTEND=noninteractive apt-get install -y nodejs npm
 RUN npm i
