add missing export port

--- a/lab05/form-frontend/Dockerfile
+++ b/lab05/form-frontend/Dockerfile
@@ -13,4 +13,6 @@ RUN apt-get update
 RUN DEBIAN_FRONTEND=noninteractive apt-get install -y nodejs npm
 RUN npm i
 
+EXPOSE $PORT
+
 ENTRYPOINT ["node", "."]
