add default values to env

--- a/lab05/recommender-backend/Dockerfile
+++ b/lab05/recommender-backend/Dockerfile
@@ -1,10 +1,10 @@
 FROM ubuntu:focal
 
-ENV DB_USER=
-ENV DB_PASS=
-ENV DB_NAME=
-ENV DB_HOST=
-ENV PORT=
+ENV DB_USER=""
+ENV DB_PASS=""
+ENV DB_NAME=""
+ENV DB_HOST=""
+ENV PORT=8080
 
 WORKDIR /app
 COPY * ./
